<resources>
    <string name="app_name">HelloToast</string>
    <string name="button_label_toast">Toast</string>
    <string name="button_label_count">Toast</string>
    <string name="count_initial_value">0</string>
    <string name="toast_message">Hello Toast!</string>
    <string name="zero">0</string>
    <string name="count_btn">More</string>
    <string name="lessBtn">Less</string>
    <string name="less">Less</string>
    <string name="reset">HARD MODE</string>
</resources>